# tracdap

./: .gitignore  settings.gradle
.github/config/: int-exec-ssh.yaml
.github/scripts/: int-exec-ssh.setup.sh  int-storage-gcs-setup.sh
.github/workflows/: build.yaml  build.yml  compliance.yaml  integration-cloud.yaml  integration-sql.yaml  integration.yaml  integration.yml  packaging.yaml  packaging.yml  ssh_executor.yml
dev/: python_build_utils.py  version.sh
dev/codegen/: generator.py
dev/ide/idea/: modules.xml
dev/ide/idea/inspectionProfiles/: Project_Default.xml
examples/models/python/config/: data_import.yaml  structured_objects.yaml  sys_config.yaml
examples/models/python/src/tutorial/: data_export.py  data_export_2.py  data_import.py  external_systems.py  model_params.py  polars.py  structured_objects.py
gradle/: plugins.gradle  versions.gradle
tracdap-libs/tracdap-lib-auth/: build.gradle
tracdap-plugins/avro-format/: build.gradle
tracdap-plugins/gcp-storage/: build.gradle
tracdap-plugins/kubernetes/: build.gradle
tracdap-runtime/python/: README.md  build_runtime.py  constraints.txt  pyproject.toml  requirements.txt  setup.cfg
tracdap-runtime/python-ext/: pyproject.toml
tracdap-runtime/python/test/tracdap_examples/: test_tutorial.py
tracdap-shell/python/: README.md  build_shell.py  setup.cfg
tracdap-shell/python/src/tracdap/shell/: __init__.py
tracdap-shell/python/src/tracdap/shell/_impl/: grpc.py
tracdap-shell/python/src/tracdap/shell/platform/: __init__.py
tracdap-shell/python/test/tracdap_test/: test_grpc.py
(+343 files in other folders)
