[metadata]

# Do not change the version here!
# For package builds, the package-ctrl script will fill in the version
# Otherwise the version should always be set to DEVELOPMENT

name = tracdap-shell
version = DEVELOPMENT

description = Interactive shell for exploratory analysis and model development using the TRAC Data & Analytics Platform
long_description = file: README.md
long_description_content_type = text/markdown

license = Apache-2.0
platform = any

url = https://tracdap.finos.org/

project_urls =
    Documentation = https://tracdap.readthedocs.io/
    Source Code = https://github.com/finos/tracdap
    Bug Tracker = https://github.com/finos/tracdap/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

author = Martin Traverse
author_email = martin.traverse@accenture.com


[options]

packages =
    tracdap.shell
    tracdap.shell.platform
    tracdap.shell._impl
    tracdap.sh_gen
    tracdap.sh_gen.domain
    tracdap.sh_gen.domain.tracdap
    tracdap.sh_gen.domain.tracdap.metadata
    tracdap.sh_gen.domain.tracdap.api

package_dir =
    tracdap = src/tracdap
    tracdap.shell = src/tracdap/shell

python_requires = >=3.7

install_requires =
    tracdap-runtime == DEVELOPMENT
